[package]

name = "recs"
version = "1.1.0"
authors = ["Andy Barron <AndrewLBarron@gmail.com>"]

description = "Simple, macro-free entity-component system in pure Rust."

repository = "https://github.com/andybarron/rustic-ecs"

readme = "./README.md"

keywords = ["entity", "entity-component", "component", "system", "ecs"]

license = "MIT"